tests/neg/rec-type.stk
type A = A
type B = B
type C = {a: A, c: C}
type D = {a: A, c: D}

type X = Y
type Y = X

fun test1(a: A): A = a.x // error

fun test2(x: X): Unit = x.a // error

fun test3(a: A): Int = a  // error

fun test4(a: Int): A = a // error

fun test5(a: A): B = a   // error

fun test6(x: X): Y = x   // error


fun main = 10 p
